--- a/public/locales/ko.json
+++ b/public/locales/ko.json
@@ -63,9 +63,21 @@
             "name": "가계부 명",
             "delete": "가계부 삭제 [{item}]"
         },
+        "category":{
+            "name":"대분류 명",
+            "sub-name":"소분류 명",
+            "main-sel":"대분류 선택"
+        },
         "settings": {
             "title": "설정",
-            "category": "가계부 분류 설정"
+            "category": {
+                "main": "가계부 분류 설정",
+                "regist" : "가계부 대분류 등록",
+                "modify" : "가계부 대분류 수정",
+                "delete" : "가계부 분류 삭제 [{item}]",
+                "sub-regist" : "가계부 소분류 등록",
+                "sub-modify" : "가계부 소분류 수정"
+            }
         },
         "common": {
             "btn": "버튼",
@@ -195,16 +207,18 @@
             "regist-info": "가계부를 등록해주세요.",
             "not-exist-datedata": "해당 날짜에 데이터가 존재하지 않습니다.",
             "not-exist-monthdata": "해당 월에 대한 데이터가 존재하지 않습니다.",
-            "delete-info": "가계부 데이터를 삭제하면 되돌릴 수 없습니다.<br></br> 정말 삭제하시겠습니까?"
+            "delete-info": "가계부 데이터를 삭제하면 되돌릴 수 없습니다.<br></br>정말 삭제하시겠습니까?"
         },
         "settings": {
-            "category-info": "아래는 가계부의 대분류와 소분류를 설정하는 곳입니다."
+            "category-info": "아래는 가계부 시스템의 분류 정보를 설정하는 곳입니다.",
+            "category-regist-info": "가계부 시스템의의 분류 정보를 등록하는 곳입니다. 소분류를 등록하는 경우 대분류를 반드시 선택해주세요",
+            "category-delete-info": "분류류 데이터를 삭제하면 되돌릴 수 없습니다.<br></br>정말 삭제하시겠습니까?<br></br>(※만약 하위 카테고리가 존재한다면 일괄 삭제됩니다.)"
         },
         "common": {
             "upload-file": "파일 하나 업로드",
             "drag-drop": "혹은 드래그 앤 드롭",
             "image-limit": "최대 10MB의 이미지 파일",
-            "input-max": "{item}은/는 최대 {max} 글자까지 입력할 수 있습니다.",
+            "input-max": "{item}은/는 최대 {max} 글자까지",
             "ready":"해당 서비스는 준비중입니다."
         },
         "users": {
